--- a/ElementOfHtml.html
+++ b/ElementOfHtml.html
@@ -103,12 +103,12 @@
 
     <h4>视频</h4>
     <p>
-        <!--video src="./video/movie.mp4" autoplay >Video</video-->
+        <video src="./video/movie.mp4" autoplay >Video</video>
         <video src="./video/movie.mp4" controls></video>
     </p>
     <h4>音频</h4>
     <p>
-        <!--audio src="./audio/music.mp3" autoplay >Audeo</audio-->
+        <audio src="./audio/music.mp3" autoplay >Audeo</audio>
         <audio src="./audio/music.mp3" controls></audio>
     </p>
 
