--- a/form.html
+++ b/form.html
@@ -7,6 +7,11 @@
     <title>表单</title>
 </head>
 
+<style type="text/css">
+    body {background-color: coral}
+
+</style>
+
 <body>
     <form action="#">
         用户名：<input type="text" value="张山"> <br><br>
